--- a/index.html
+++ b/index.html
@@ -1,35 +1,77 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <!-- displays site properly based on user's device -->
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  
+
   <title>Frontend Mentor | Profile card component</title>
 
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
+  <link rel="stylesheet" href="./style.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Kumbh+Sans:wght@400;700&display=swap" rel="stylesheet">
 </head>
+
 <body>
-  Victor Crest
-  26
-  London
+  <header>
+    <h1>Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.</h1>
+  </header>
+  <main id="main">
+    <img class="card-pattern" src="./images/bg-pattern-card.svg" alt="Colored pattern">
+    <img class="ppicture" src="./images/image-victor.jpg" alt="Profil picture">
+    <div class="pinfo">
+      <div>
+        <p class="name">
+          Victor Crest
+          <span>26</span>
+        </p>
+      </div>
+      <p class="city">
+        London
+      </p>
+    </div>
+    <div class="pstats">
+      <div>
+        <p class="bold">
+          80K
+        </p>
+        <p class="small">
+          Followers
+        </p>
+      </div>
+      <div>
+        <p class="bold">
+          803K
+        </p>
+        <p class="small">
+          Likes
+        </p>
+      </div>
+      <div>
+        <p class="bold">
+          1.4K
+        </p>
+        <p class="small">
+          Photos
+        </p>
+      </div>
+    </div>
+  </main>
+  <footer class="attribution">
+    <p>Coded by <a href="https://github.com/enimad">Enimad</a> 🐱‍👤</p>
+  </footer>
 
-  80K
-  Followers
+  <!-- Just for fun -->
+  <script>
+    document.getElementById("main").addEventListener("click", function () {
+      alert("Great click, good job ! 🐱‍🏍");
+    });
+  </script>
 
-  803K
-  Likes
-
-  1.4K
-  Photos
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
-  </div>
 </body>
+
 </html>
